ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-03-28 Thomas Häber
	- THEMES:
		* some refactoring of the JavaScript code (better documentation, replace use of eval, delete unused code/functions, merge use of functions, optimized loops ...)
	- GUI:
		* translated german php variables to english
		* optimized loops in GUI PHP code (especially the for loops)

2009-03-26 Thomas Häber
	- GUI:
		* Fixed #1745: Trim hostingplan description on overview page
	- ENGINE:
		* Fixed #1774: Missing secure Ports in ispcp-vrl-traff
		* Fixed #1770: Wrong Port in ispcp-srv-traff

2009-03-25 Thomas Häber
	- GUI:
		* Fixed #1667: It should be possible to (de)activate the log-comment on logon/password ispcp gui footer.
		* Fixed #1767: Incorrect table name 'tickets WHERE ' (regression in SQL code)
		* Fixed #1769: Unknown column ' bytes_in_avail' in 'field list' (regression in SQL code)
		* Fixed #1768: "Back" Button on Domaindetails has no function

2009-03-24 Thomas Häber
	- GUI:
		* Fixed #1762: MySQL Syntax Error (regression)
		* Fixed #1763: Wrong Harddisk Usage

2009-03-24 Benedikt Heintel
	- ENGINE:
		* Fixed #1627: Accented characters in UTF8 encoding Autoreplay message - ispcp-arpl
	- GUI:
		* Fixed #678: deleting a mysql database also deletes the user without askint to.

2009-03-23 Jochen Manz
	- ENGINE
		* Added Nathariels ispcp-vrl-traff improvements

2009-03-23 Benedikt Heintel
	- GUI:
		* Added new Favicon
	- TOOLS:
		* Fixed #1728: update net2ftp to version 0.97

2009-03-22 Thomas Häber
	- GUI:
		* Fixed #1758: domain_details.php error.

2009-03-18 Thomas Häber
	- ENGINE:
		* Fixed #1668: Add the LZMA compression to the possible backup zipping algorithms (currently only tested with debian lenny)

2009-03-18 Benedikt Heintel
	- ENGINE:
		* Fixed #1726: Removing the logs folder from the disk space monitoring
		* Fixed #1747: awstats new version (Updated AWStats to version 6.9)
 	- DISTS:
		* Fixed #1738 (FreeBSD): Add FreeBSD patch

2009-03-16 Thomas Häber