@@ -53,7 +53,7 @@ gen_logged_from($tpl);
 check_permissions($tpl);
 
 $tpl->assign(
-	 array(
+	array(
 		'TR_CLIENT_ADD_ALIAS_PAGE_TITLE' => tr('ispCP Client : Add Alias'),
 		'TR_MANAGE_DOMAIN_ALIAS' => tr('Manage domain alias'),
 		'TR_ADD_ALIAS' => tr('Add domain alias'),
@@ -63,7 +63,10 @@ $tpl->assign(
 		'TR_DOMAIN_IP' => tr('Domain IP'),
 		'TR_FORWARD' => tr('Forward to URL'),
 		'TR_ADD' => tr('Add alias'),
-		'TR_DMN_HELP' => tr("You do not need 'www.' ispCP will add it on its own.")
+		'TR_DMN_HELP' => tr("You do not need 'www.' ispCP will add it on its own."),
+		'TR_JS_EMPTYDATA' => tr("Empty data or wrong field!"),
+		'TR_JS_WDNAME' => tr("Wrong domain name!"),
+		'TR_JS_MPOINTERROR' => tr("Please write mount point!")
 	)
 );
 
